<resources>

    <string name="app_name">Calibration Tool</string>
    <string name="act_buildings">Building</string>
    <string name="act_floors">Floor</string>
    <string name="act_new_floor">New floor</string>
    <string name="act_calibration">Calibration</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="but_calibration">Calibration</string>
    <string name="but_measure">Measure</string>
    <string name="settings">Settings</string>
    <string name="desc_logo">Logo image</string>
    <string name="pref_title_server_name">Server Name</string>
    <string name="pref_title_server_address">Server IP address</string>
    <string name="pref_title_server_port">Server Port</string>
    <string name="actionAdd">Add</string>
    <string name="actionDiscard">Discard</string>
    <string name="actionRefresh">Refresh</string>
    <string name="actionMap">Map</string>
    <string name="from">© DESTOUCHES Pierre - ROCHELLE Guillaume</string>
    <string name="welcome">UTBM Calibration Tool</string>
	<string name="activeMode">MODE : ACTIVE</string>
	<string name="passiveMode">MODE : PASSIVE</string>
	<string name="contentDescriptionMap">Map</string>
	<string name="cancel">Cancel</string>
	<string name="selectBuilding">Select a building&#8230;</string>
	<string name="enterName">Enter the name :</string>
	<string name="chooseImage">Choose image :</string>
	<string name="ellipsis">&#8230;</string>
	<string name="chooseImageHint">Choose an image with the ellipsis button !</string>
	<string name="enterNameHint">Enter the name here</string>
</resources>