<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/enterName"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/floorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:hint="@string/enterNameHint"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/chooseImage"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="30sp" />

        <Button
            android:id="@+id/floorChooseFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ellipsis" />
    </LinearLayout>

    <EditText
        android:id="@+id/floorFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/chooseImageHint" 
        android:enabled="false" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/floorAddCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/floorAddNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/actionAdd" />
    </LinearLayout>

</LinearLayout>