<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom|center_horizontal"
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc_logo"
        android:paddingBottom="50dp"
        android:paddingTop="50dp"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/calibration_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/but_calibration" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/settings" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from" />

</LinearLayout>